--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
       </section>
     </header>
     <main>
-      <div class="top-promo">
-        <div class="top-promo__wrp-discription center">
+      <div class="top-promo center">
+        <div class="top-promo__wrp-discription">
           <h2 class="top-promo__title">
             That change your abstract ideas digital characters!
           </h2>
@@ -86,6 +86,95 @@
           <button class="top-promo__create-btn">Create</button>
           <button class="top-promo__about-btn">About</button>
         </div>
+      </div>
+      <div class="ribbon-nft">
+        <!-- <span class="ribbon-text">Rare NFT</span>
+        <span class="ribbon-img">
+          <svg
+            width="27"
+            height="27"
+            viewBox="0 0 27 27"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M11.7491 1.56742C11.85 0.479391 13.4081 0.397735 13.6221 1.46926L15.4037 10.3872C15.4858 10.7982 15.8282 11.1065 16.2456 11.1452L25.3009 11.9849C26.3889 12.0858 26.4706 13.6438 25.3991 13.8579L16.4811 15.6395C16.0701 15.7216 15.7618 16.064 15.7231 16.4813L14.8834 25.5367C14.7825 26.6247 13.2245 26.7063 13.0104 25.6348L11.2288 16.7169C11.1467 16.3058 10.8043 15.9976 10.387 15.9589L1.33165 15.1192C0.24362 15.0183 0.161961 13.4603 1.23348 13.2462L10.1514 11.4646C10.5625 11.3825 10.8707 11.0401 10.9094 10.6227L11.7491 1.56742Z"
+              fill="url(#paint0_linear_0_77)"
+            />
+            <defs>
+              <linearGradient
+                id="paint0_linear_0_77"
+                x1="-6.10602"
+                y1="-3.93585"
+                x2="33.0381"
+                y2="-3.59738"
+                gradientUnits="userSpaceOnUse"
+              >
+                <stop stop-color="#07C800" />
+                <stop offset="0.612619" stop-color="#57FF51" />
+                <stop offset="1" stop-color="#07C800" />
+              </linearGradient>
+            </defs>
+          </svg>
+        </span>
+        <span class="ribbon-text">Rare NFT</span>
+        <span class="ribbon-img">
+          <svg
+            width="27"
+            height="27"
+            viewBox="0 0 27 27"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M11.7491 1.56742C11.85 0.479391 13.4081 0.397735 13.6221 1.46926L15.4037 10.3872C15.4858 10.7982 15.8282 11.1065 16.2456 11.1452L25.3009 11.9849C26.3889 12.0858 26.4706 13.6438 25.3991 13.8579L16.4811 15.6395C16.0701 15.7216 15.7618 16.064 15.7231 16.4813L14.8834 25.5367C14.7825 26.6247 13.2245 26.7063 13.0104 25.6348L11.2288 16.7169C11.1467 16.3058 10.8043 15.9976 10.387 15.9589L1.33165 15.1192C0.24362 15.0183 0.161961 13.4603 1.23348 13.2462L10.1514 11.4646C10.5625 11.3825 10.8707 11.0401 10.9094 10.6227L11.7491 1.56742Z"
+              fill="url(#paint0_linear_0_77)"
+            />
+            <defs>
+              <linearGradient
+                id="paint0_linear_0_77"
+                x1="-6.10602"
+                y1="-3.93585"
+                x2="33.0381"
+                y2="-3.59738"
+                gradientUnits="userSpaceOnUse"
+              >
+                <stop stop-color="#07C800" />
+                <stop offset="0.612619" stop-color="#57FF51" />
+                <stop offset="1" stop-color="#07C800" />
+              </linearGradient>
+            </defs>
+          </svg>
+        </span>
+        <span class="ribbon-text">Rare NFT</span>
+        <span class="ribbon-img">
+          <svg
+            width="27"
+            height="27"
+            viewBox="0 0 27 27"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M11.7491 1.56742C11.85 0.479391 13.4081 0.397735 13.6221 1.46926L15.4037 10.3872C15.4858 10.7982 15.8282 11.1065 16.2456 11.1452L25.3009 11.9849C26.3889 12.0858 26.4706 13.6438 25.3991 13.8579L16.4811 15.6395C16.0701 15.7216 15.7618 16.064 15.7231 16.4813L14.8834 25.5367C14.7825 26.6247 13.2245 26.7063 13.0104 25.6348L11.2288 16.7169C11.1467 16.3058 10.8043 15.9976 10.387 15.9589L1.33165 15.1192C0.24362 15.0183 0.161961 13.4603 1.23348 13.2462L10.1514 11.4646C10.5625 11.3825 10.8707 11.0401 10.9094 10.6227L11.7491 1.56742Z"
+              fill="url(#paint0_linear_0_77)"
+            />
+            <defs>
+              <linearGradient
+                id="paint0_linear_0_77"
+                x1="-6.10602"
+                y1="-3.93585"
+                x2="33.0381"
+                y2="-3.59738"
+                gradientUnits="userSpaceOnUse"
+              >
+                <stop stop-color="#07C800" />
+                <stop offset="0.612619" stop-color="#57FF51" />
+                <stop offset="1" stop-color="#07C800" />
+              </linearGradient>
+            </defs>
+          </svg>
+        </span> -->
       </div>
     </main>
   </body>
