--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nfts</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@400;500;700;800&family=Open+Sans:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style/style.css" />
   </head>
   <body>
@@ -77,9 +81,10 @@
             That change your abstract ideas digital characters!
           </h2>
           <p class="top-promo__txt">
-            That turns your imagination into an&nbsp;amazing revenue-generating
+            That turns your imagination into an amazing revenue-generating
             digital model. We&nbsp;share the unchallengeable level
-            of&nbsp;creativity that makes our NFT designs worth monetizing for!
+            of&nbsp;creativity that makes our
+            <span class="big-text">nft</span> designs worth monetizing for!
           </p>
         </div>
         <div class="top-promo__wrp-btn">
@@ -87,95 +92,101 @@
           <button class="top-promo__about-btn">About</button>
         </div>
       </div>
-      <div class="ribbon-nft">
-        <!-- <span class="ribbon-text">Rare NFT</span>
-        <span class="ribbon-img">
-          <svg
-            width="27"
-            height="27"
-            viewBox="0 0 27 27"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M11.7491 1.56742C11.85 0.479391 13.4081 0.397735 13.6221 1.46926L15.4037 10.3872C15.4858 10.7982 15.8282 11.1065 16.2456 11.1452L25.3009 11.9849C26.3889 12.0858 26.4706 13.6438 25.3991 13.8579L16.4811 15.6395C16.0701 15.7216 15.7618 16.064 15.7231 16.4813L14.8834 25.5367C14.7825 26.6247 13.2245 26.7063 13.0104 25.6348L11.2288 16.7169C11.1467 16.3058 10.8043 15.9976 10.387 15.9589L1.33165 15.1192C0.24362 15.0183 0.161961 13.4603 1.23348 13.2462L10.1514 11.4646C10.5625 11.3825 10.8707 11.0401 10.9094 10.6227L11.7491 1.56742Z"
-              fill="url(#paint0_linear_0_77)"
+      <div class="ribbon-nft center"></div>
+      <section class="start-creating center">
+        <div class="start-creating__discription-wrp">
+          <h3 class="start-creating__title">
+            Create <span class="big-text">nft</span>
+          </h3>
+          <p class="start-creating__text">
+            Our <span class="big-text">nft</span> atwork cost is&nbsp;less than
+            what freelancers would be&nbsp;offering you. Something only
+            <span class="big-text">nft</span> Creator offers you!
+          </p>
+        </div>
+        <div class="start-creating__selection-panel">
+          <form class="selection-panel__form">
+            <input
+              class="selection-panel__input"
+              checked
+              type="checkbox"
+              id="basik"
             />
-            <defs>
-              <linearGradient
-                id="paint0_linear_0_77"
-                x1="-6.10602"
-                y1="-3.93585"
-                x2="33.0381"
-                y2="-3.59738"
-                gradientUnits="userSpaceOnUse"
-              >
-                <stop stop-color="#07C800" />
-                <stop offset="0.612619" stop-color="#57FF51" />
-                <stop offset="1" stop-color="#07C800" />
-              </linearGradient>
-            </defs>
-          </svg>
-        </span>
-        <span class="ribbon-text">Rare NFT</span>
-        <span class="ribbon-img">
-          <svg
-            width="27"
-            height="27"
-            viewBox="0 0 27 27"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M11.7491 1.56742C11.85 0.479391 13.4081 0.397735 13.6221 1.46926L15.4037 10.3872C15.4858 10.7982 15.8282 11.1065 16.2456 11.1452L25.3009 11.9849C26.3889 12.0858 26.4706 13.6438 25.3991 13.8579L16.4811 15.6395C16.0701 15.7216 15.7618 16.064 15.7231 16.4813L14.8834 25.5367C14.7825 26.6247 13.2245 26.7063 13.0104 25.6348L11.2288 16.7169C11.1467 16.3058 10.8043 15.9976 10.387 15.9589L1.33165 15.1192C0.24362 15.0183 0.161961 13.4603 1.23348 13.2462L10.1514 11.4646C10.5625 11.3825 10.8707 11.0401 10.9094 10.6227L11.7491 1.56742Z"
-              fill="url(#paint0_linear_0_77)"
+            <label class="selection-panel__label" for="basik">Basik</label>
+
+            <input
+              class="selection-panel__input"
+              type="checkbox"
+              id="professional"
             />
-            <defs>
-              <linearGradient
-                id="paint0_linear_0_77"
-                x1="-6.10602"
-                y1="-3.93585"
-                x2="33.0381"
-                y2="-3.59738"
-                gradientUnits="userSpaceOnUse"
-              >
-                <stop stop-color="#07C800" />
-                <stop offset="0.612619" stop-color="#57FF51" />
-                <stop offset="1" stop-color="#07C800" />
-              </linearGradient>
-            </defs>
-          </svg>
-        </span>
-        <span class="ribbon-text">Rare NFT</span>
-        <span class="ribbon-img">
-          <svg
-            width="27"
-            height="27"
-            viewBox="0 0 27 27"
-            fill="none"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              d="M11.7491 1.56742C11.85 0.479391 13.4081 0.397735 13.6221 1.46926L15.4037 10.3872C15.4858 10.7982 15.8282 11.1065 16.2456 11.1452L25.3009 11.9849C26.3889 12.0858 26.4706 13.6438 25.3991 13.8579L16.4811 15.6395C16.0701 15.7216 15.7618 16.064 15.7231 16.4813L14.8834 25.5367C14.7825 26.6247 13.2245 26.7063 13.0104 25.6348L11.2288 16.7169C11.1467 16.3058 10.8043 15.9976 10.387 15.9589L1.33165 15.1192C0.24362 15.0183 0.161961 13.4603 1.23348 13.2462L10.1514 11.4646C10.5625 11.3825 10.8707 11.0401 10.9094 10.6227L11.7491 1.56742Z"
-              fill="url(#paint0_linear_0_77)"
-            />
-            <defs>
-              <linearGradient
-                id="paint0_linear_0_77"
-                x1="-6.10602"
-                y1="-3.93585"
-                x2="33.0381"
-                y2="-3.59738"
-                gradientUnits="userSpaceOnUse"
-              >
-                <stop stop-color="#07C800" />
-                <stop offset="0.612619" stop-color="#57FF51" />
-                <stop offset="1" stop-color="#07C800" />
-              </linearGradient>
-            </defs>
-          </svg>
-        </span> -->
-      </div>
+            <label class="selection-panel__label" for="professional"
+              >Professional</label
+            >
+            <input class="selection-panel__input" type="checkbox" id="elite" />
+            <label class="selection-panel__label" for="elite">Elite</label>
+          </form>
+        </div>
+        <div class="start-creating__icon-panel">
+          <ul class="icon-panel__list">
+            <li class="icon-panel__item">
+              <div class="icon-panel__card">
+                <img
+                  class="icon-panel__img"
+                  src="img/icon1.png"
+                  alt="icon1"
+                  width="168"
+                />
+                <span class="icon-panel__name">Ben carle</span>
+                <span class="icon-panel__txt"
+                  >Super rare <span class="big-text">nft</span></span
+                >
+              </div>
+            </li>
+            <li class="icon-panel__item">
+              <div class="icon-panel__card">
+                <img
+                  class="icon-panel__img"
+                  src="img/icon2.png"
+                  alt="icon2"
+                  width="168"
+                />
+                <span class="icon-panel__name">Ben carle</span>
+                <span class="icon-panel__txt"
+                  >Super rare <span class="big-text">nft</span></span
+                >
+              </div>
+            </li>
+            <li class="icon-panel__item">
+              <div class="icon-panel__card">
+                <img
+                  class="icon-panel__img"
+                  src="img/icon3.png"
+                  alt="icon3"
+                  width="168"
+                />
+                <span class="icon-panel__name">Ben carle</span>
+                <span class="icon-panel__txt"
+                  >Super rare <span class="big-text">nft</span></span
+                >
+              </div>
+            </li>
+            <li class="icon-panel__item">
+              <div class="icon-panel__card">
+                <img
+                  class="icon-panel__img"
+                  src="img/icon4.png"
+                  alt="icon4"
+                  width="168"
+                />
+                <span class="icon-panel__name">Ben carle</span>
+                <span class="icon-panel__txt"
+                  >Super rare <span class="big-text">nft</span></span
+                >
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
   </body>
 </html>
