section creaty-list

--- a/index.html
+++ b/index.html
@@ -130,12 +130,14 @@
           <ul class="icon-panel__list">
             <li class="icon-panel__item">
               <div class="icon-panel__card">
-                <img
-                  class="icon-panel__img"
-                  src="img/icon1.png"
-                  alt="icon1"
-                  width="168"
-                />
+                <div class="icon-panel__img-wrp">
+                  <img
+                    class="icon-panel__img"
+                    src="img/icon1.1.png"
+                    alt="icon1"
+                    width="166"
+                  />
+                </div>
                 <span class="icon-panel__name">Ben carle</span>
                 <span class="icon-panel__txt"
                   >Super rare <span class="big-text">nft</span></span
@@ -144,12 +146,14 @@
             </li>
             <li class="icon-panel__item">
               <div class="icon-panel__card">
-                <img
-                  class="icon-panel__img"
-                  src="img/icon2.png"
-                  alt="icon2"
-                  width="168"
-                />
+                <div class="icon-panel__img-wrp">
+                  <img
+                    class="icon-panel__img"
+                    src="img/icon2.png"
+                    alt="icon2"
+                    width="166"
+                  />
+                </div>
                 <span class="icon-panel__name">Ben carle</span>
                 <span class="icon-panel__txt"
                   >Super rare <span class="big-text">nft</span></span
@@ -158,12 +162,14 @@
             </li>
             <li class="icon-panel__item">
               <div class="icon-panel__card">
-                <img
-                  class="icon-panel__img"
-                  src="img/icon3.png"
-                  alt="icon3"
-                  width="168"
-                />
+                <div class="icon-panel__img-wrp">
+                  <img
+                    class="icon-panel__img"
+                    src="img/icon3.png"
+                    alt="icon3"
+                    width="166"
+                  />
+                </div>
                 <span class="icon-panel__name">Ben carle</span>
                 <span class="icon-panel__txt"
                   >Super rare <span class="big-text">nft</span></span
@@ -172,12 +178,14 @@
             </li>
             <li class="icon-panel__item">
               <div class="icon-panel__card">
-                <img
-                  class="icon-panel__img"
-                  src="img/icon4.png"
-                  alt="icon4"
-                  width="168"
-                />
+                <div class="icon-panel__img-wrp">
+                  <img
+                    class="icon-panel__img"
+                    src="img/icon4.png"
+                    alt="icon4"
+                    width="166"
+                  />
+                </div>
                 <span class="icon-panel__name">Ben carle</span>
                 <span class="icon-panel__txt"
                   >Super rare <span class="big-text">nft</span></span
@@ -186,6 +194,62 @@
             </li>
           </ul>
         </div>
+      </section>
+      <section class="creaty-list center">
+        <div class="creaty-list__discription">
+          <h3 class="creaty-list__title">Start creating</h3>
+          <p class="creaty-list__text">
+            Creaty, list and sell your own <span class="big-text">nft</span>s
+          </p>
+        </div>
+        <ul class="creaty-list__card-list">
+          <li class="creaty-list__card-item">
+            <div class="card-item__txt-wrp">
+              <h4 class="card-item__title">
+                Creaty, list and your own <span class="big-text">nft</span>s
+              </h4>
+              <p class="card-item__text">
+                Choose a&nbsp;wallet: Select a&nbsp;reputable&nbsp;<span
+                  class="big-text"
+                  >ft</span
+                >
+                wallet provider that supports the blockchain on&nbsp;which your
+                desired <span class="big-text">nft</span>s are issued. Popular
+                options include MetaMask, Trust Wallet, and MyEtherWallet.
+              </p>
+              <a class="card-item__link" href="">Learn more</a>
+            </div>
+          </li>
+          <li class="creaty-list__card-item">
+            <div class="card-item__txt-wrp">
+              <h4 class="card-item__title">
+                Upload your <span class="big-text">nft</span>s
+              </h4>
+              <p class="card-item__text">
+                Prepare your <span class="big-text">nft</span>: Create or obtain
+                the digital asset that you want to&nbsp;tokenize
+                as&nbsp;an&nbsp;<span class="big-text">nft</span>. This could
+                be&nbsp;artwork, music, videos, virtual items, or any other
+                unique digital content.
+              </p>
+              <a class="card-item__link" href="">Learn more</a>
+            </div>
+          </li>
+          <li class="creaty-list__card-item">
+            <div class="card-item__txt-wrp">
+              <h4 class="card-item__title">
+                List your <span class="big-text">nft</span>s
+              </h4>
+              <p class="card-item__text">
+                Explore and purchase <span class="big-text">nft</span>s: Browse
+                through the available&nbsp;<span class="big-text">ft</span>
+                collections, select the desired artwork or&nbsp;digital asset,
+                and follow the instructions to&nbsp;make a&nbsp;purchase.
+              </p>
+              <a class="card-item__link" href="">Learn more</a>
+            </div>
+          </li>
+        </ul>
       </section>
     </main>
   </body>
