--- a/index.html
+++ b/index.html
@@ -261,7 +261,6 @@
             <input type="radio" name="slider" id="switch3" />
             <input type="radio" name="slider" id="switch4" />
             <input type="radio" name="slider" id="switch5" />
-
             <div id="slides">
               <div id="overflow">
                 <div class="image">
@@ -894,6 +893,124 @@
               <label for="switch5"></label>
             </div>
           </article>
+        </div>
+      </section>
+      <section class="questions center">
+        <h3 class="questions__title">Frequently asked questions</h3>
+        <div class="accordion">
+          <div class="accordion__item">
+            <input
+              class="accordion__input"
+              type="checkbox"
+              name="faq"
+              id="faq_1"
+            />
+            <label class="accordion__title" for="faq_1"
+              >How can&nbsp;I see my&nbsp;NFTs?</label
+            >
+            <div class="accordion__body">
+              <p>
+                ⁃ After paying for the
+                <span class="big-text">nft</span> in&nbsp;<span class="big-text"
+                  >sol</span
+                >, you will need to&nbsp;click the &laquo;Request
+                Purchase&raquo; button to&nbsp;transfer the newly purchased
+                <span class="big-text">nft</span> to&nbsp;your wallet. ⁃
+                If&nbsp;you still see the &laquo;Buy Now&raquo; button after
+                a&nbsp;successful purchase, simply refresh the page to&nbsp;open
+                the &laquo;Declare Purchase&raquo; button.
+                <br />
+                ⁃ The <span class="big-text">nft</span> purchase procedure may
+                be&nbsp;slightly different in&nbsp;other systems.
+              </p>
+            </div>
+          </div>
+          <div class="accordion__item">
+            <input
+              class="accordion__input"
+              type="checkbox"
+              name="faq"
+              id="faq_2"
+            />
+            <label class="accordion__title" for="faq_2"
+              >How do&nbsp;I add SOL cryptocurrency to&nbsp;my&nbsp;digital
+              wallet?</label
+            >
+            <div class="accordion__body">
+              <p>
+                ⁃ After paying for the
+                <span class="big-text">nft</span> in&nbsp;<span class="big-text"
+                  >sol</span
+                >, you will need to&nbsp;click the &laquo;Request
+                Purchase&raquo; button to&nbsp;transfer the newly purchased
+                <span class="big-text">nft</span> to&nbsp;your wallet. ⁃
+                If&nbsp;you still see the &laquo;Buy Now&raquo; button after
+                a&nbsp;successful purchase, simply refresh the page to&nbsp;open
+                the &laquo;Declare Purchase&raquo; button.
+                <br />
+                ⁃ The
+                <span class="big-text">nft</span> purchase procedure may
+                be&nbsp;slightly different in&nbsp;other systems.
+              </p>
+            </div>
+          </div>
+          <div class="accordion__item">
+            <input
+              checked
+              class="accordion__input"
+              type="checkbox"
+              name="faq"
+              id="faq_3"
+            />
+            <label class="accordion__title" for="faq_3"
+              >How do&nbsp;I apply for an&nbsp;acquired NFT?</label
+            >
+            <div class="accordion__body">
+              <p>
+                ⁃ After paying for the
+                <span class="big-text">nft</span> in&nbsp;<span class="big-text"
+                  >sol</span
+                >, you will need to&nbsp;click the &laquo;Request
+                Purchase&raquo; button to&nbsp;transfer the newly purchased
+                <span class="big-text">nft</span> to&nbsp;your wallet. ⁃
+                If&nbsp;you still see the &laquo;Buy Now&raquo; button after
+                a&nbsp;successful purchase, simply refresh the page to&nbsp;open
+                the &laquo;Declare Purchase&raquo; button.
+                <br />
+                ⁃ The
+                <span class="big-text">nft</span> purchase procedure may
+                be&nbsp;slightly different in&nbsp;other systems.
+              </p>
+            </div>
+          </div>
+          <div class="accordion__item">
+            <input
+              class="accordion__input"
+              type="checkbox"
+              name="faq"
+              id="faq_4"
+            />
+            <label class="accordion__title" for="faq_4"
+              >How can&nbsp;I give NFT to&nbsp;someone else?</label
+            >
+            <div class="accordion__body">
+              <p>
+                ⁃ After paying for the
+                <span class="big-text">nft</span> in&nbsp;<span class="big-text"
+                  >sol</span
+                >, you will need to&nbsp;click the &laquo;Request
+                Purchase&raquo; button to&nbsp;transfer the newly purchased
+                <span class="big-text">nft</span> to&nbsp;your wallet. ⁃
+                If&nbsp;you still see the &laquo;Buy Now&raquo; button after
+                a&nbsp;successful purchase, simply refresh the page to&nbsp;open
+                the &laquo;Declare Purchase&raquo; button.
+                <br />
+                ⁃ The
+                <span class="big-text">nft</span> purchase procedure may
+                be&nbsp;slightly different in&nbsp;other systems.
+              </p>
+            </div>
+          </div>
         </div>
       </section>
     </main>
