--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="page-header">
       <section class="page-header__wrp center">
         <div class="page-header__logo-wrp">
-          <a href="#">
+          <a href="index.html">
             <svg
               width="48"
               height="20"
@@ -50,26 +50,115 @@
             <label class="menu-icon" for="menu-switch">
               <span></span>
             </label>
-            <ul class="menu-list">
-              <li class="menu-list__item">
-                <span class="menu-list-title">menu</span>
-              </li>
-              <li class="menu-list__item">
-                <a class="menu-list__link header-nav__link" href="#001"
-                  >Почему&nbsp;мы?</a
-                >
-              </li>
-              <li class="menu-list__item">
-                <a class="menu-list__link header-nav__link" href="#002"
-                  >О&nbsp;сервисе</a
-                >
-              </li>
-              <li class="menu-list__item">
-                <a class="menu-list__link header-nav__link" href="#003"
-                  >Вопросы-ответы</a
-                >
-              </li>
-            </ul>
+            <div class="mobile-list">
+              <div class="menu-list__wrp">
+                <ul class="menu-list">
+                  <li class="menu-list__item">
+                    <a href="index.html" class="menu-list-title"
+                      ><svg
+                        width="48"
+                        height="20"
+                        viewBox="0 0 48 20"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M8.936 5.776C10.552 5.776 11.848 6.256 12.824 7.216C13.816 8.176 14.312 9.624 14.312 11.56V19H9.752V12.304C9.752 10.528 9.04 9.64 7.616 9.64C6.832 9.64 6.2 9.896 5.72 10.408C5.256 10.92 5.024 11.688 5.024 12.712V19H0.464V5.992H4.808V7.408C5.32 6.88 5.928 6.48 6.632 6.208C7.336 5.92 8.104 5.776 8.936 5.776ZM21.6149 6.472H24.7109V9.88H21.7349V19H17.1749V6.136C17.1749 4.552 17.6469 3.296 18.5909 2.368C19.5509 1.44 20.8869 0.975999 22.5989 0.975999C23.1749 0.975999 23.7349 1.032 24.2789 1.144C24.8229 1.256 25.2709 1.424 25.6229 1.648L24.4949 4.864C24.0469 4.608 23.5909 4.48 23.1269 4.48C22.6469 4.48 22.2709 4.624 21.9989 4.912C21.7429 5.2 21.6149 5.624 21.6149 6.184V6.472ZM34.7619 18.472C34.3779 18.712 33.9059 18.896 33.3459 19.024C32.8019 19.152 32.2179 19.216 31.5939 19.216C29.8979 19.216 28.5939 18.8 27.6819 17.968C26.7859 17.136 26.3379 15.896 26.3379 14.248V3.088H30.8979V6.472H33.8499V9.88H30.8979V14.2C30.8979 14.68 31.0179 15.048 31.2579 15.304C31.4979 15.56 31.8259 15.688 32.2419 15.688C32.7699 15.688 33.2339 15.552 33.6339 15.28L34.7619 18.472ZM41.2389 19.216C40.1509 19.216 39.0789 19.096 38.0229 18.856C36.9669 18.6 36.1189 18.272 35.4789 17.872L36.8469 14.752C37.4389 15.12 38.1429 15.416 38.9589 15.64C39.7749 15.848 40.5829 15.952 41.3829 15.952C42.1189 15.952 42.6389 15.88 42.9429 15.736C43.2629 15.576 43.4229 15.352 43.4229 15.064C43.4229 14.776 43.2309 14.576 42.8469 14.464C42.4789 14.336 41.8869 14.216 41.0709 14.104C40.0309 13.976 39.1429 13.808 38.4069 13.6C37.6869 13.392 37.0629 13.008 36.5349 12.448C36.0069 11.888 35.7429 11.104 35.7429 10.096C35.7429 9.264 35.9909 8.528 36.4869 7.888C36.9829 7.232 37.7029 6.72 38.6469 6.352C39.6069 5.968 40.7509 5.776 42.0789 5.776C43.0229 5.776 43.9589 5.872 44.8869 6.064C45.8149 6.256 46.5909 6.528 47.2149 6.88L45.8469 9.976C44.6949 9.336 43.4469 9.016 42.1029 9.016C41.3829 9.016 40.8549 9.104 40.5189 9.28C40.1829 9.44 40.0149 9.656 40.0149 9.928C40.0149 10.232 40.1989 10.448 40.5669 10.576C40.9349 10.688 41.5429 10.808 42.3909 10.936C43.4629 11.096 44.3509 11.28 45.0549 11.488C45.7589 11.696 46.3669 12.08 46.8789 12.64C47.4069 13.184 47.6709 13.952 47.6709 14.944C47.6709 15.76 47.4229 16.496 46.9269 17.152C46.4309 17.792 45.6949 18.296 44.7189 18.664C43.7589 19.032 42.5989 19.216 41.2389 19.216Z"
+                          fill="url(#paint0_linear_0_203)"
+                        />
+                        <defs>
+                          <linearGradient
+                            id="paint0_linear_0_203"
+                            x1="-1"
+                            y1="-8"
+                            x2="51.675"
+                            y2="-3.53124"
+                            gradientUnits="userSpaceOnUse"
+                          >
+                            <stop stop-color="#07C800" />
+                            <stop offset="0.612619" stop-color="#57FF51" />
+                            <stop offset="1" stop-color="#07C800" />
+                          </linearGradient>
+                        </defs>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="menu-list__item">
+                    <a class="menu-list__link" href="#">Collection</a>
+                  </li>
+                  <li class="menu-list__item">
+                    <a class="menu-list__link" href="#">About</a>
+                  </li>
+                  <li class="menu-list__item">
+                    <a class="menu-list__link" href="#">Roadmap</a>
+                  </li>
+                  <li class="menu-list__item">
+                    <a class="menu-list__link" href="#">Developers</a>
+                  </li>
+                </ul>
+                <div class="menu-list__btn-wrp">
+                  <div class="social-logo-wrp">
+                    <a href="https://Youtube.com" target="_blank">
+                      <svg
+                        width="26"
+                        height="26"
+                        viewBox="0 0 26 26"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M14.285 0.501294C15.1972 0.497794 16.1093 0.506961 17.0213 0.528794L17.2638 0.537544C17.5438 0.547544 17.82 0.560044 18.1538 0.575044C19.4838 0.637544 20.3913 0.847544 21.1875 1.15629C22.0125 1.47379 22.7075 1.90379 23.4025 2.59879C24.038 3.2233 24.5298 3.97873 24.8438 4.81254C25.1525 5.60879 25.3625 6.51754 25.425 7.84754C25.44 8.18004 25.4525 8.45754 25.4625 8.73754L25.47 8.98004C25.4922 9.89153 25.5018 10.8033 25.4988 11.715L25.5 12.6475V14.285C25.5031 15.1972 25.4935 16.1094 25.4713 17.0213L25.4638 17.2638C25.4538 17.5438 25.4413 17.82 25.4263 18.1538C25.3638 19.4838 25.1513 20.3913 24.8438 21.1875C24.5308 22.0222 24.0389 22.7783 23.4025 23.4025C22.7775 24.0379 22.0216 24.5297 21.1875 24.8438C20.3913 25.1525 19.4838 25.3625 18.1538 25.425C17.82 25.44 17.5438 25.4525 17.2638 25.4625L17.0213 25.47C16.1093 25.4923 15.1972 25.5019 14.285 25.4988L13.3525 25.5H11.7163C10.8041 25.5031 9.89191 25.4935 8.98 25.4713L8.7375 25.4638C8.44077 25.453 8.14409 25.4405 7.8475 25.4263C6.5175 25.3638 5.61 25.1513 4.8125 24.8438C3.97836 24.5305 3.2228 24.0386 2.59875 23.4025C1.96256 22.7779 1.47028 22.022 1.15625 21.1875C0.847504 20.3913 0.637504 19.4838 0.575004 18.1538C0.561083 17.8572 0.548583 17.5605 0.537504 17.2638L0.531254 17.0213C0.508209 16.1094 0.497791 15.1972 0.500004 14.285V11.715C0.496515 10.8033 0.505683 9.89154 0.527504 8.98004L0.536254 8.73754C0.546254 8.45754 0.558754 8.18004 0.573754 7.84754C0.636254 6.51629 0.846254 5.61004 1.155 4.81254C1.46922 3.97832 1.96246 3.2231 2.6 2.60004C3.22362 1.96348 3.97871 1.47076 4.8125 1.15629C5.61 0.847544 6.51625 0.637544 7.8475 0.575044L8.7375 0.537544L8.98 0.531294C9.89148 0.50826 10.8032 0.497842 11.715 0.500044L14.285 0.501294ZM13 6.75129C12.1719 6.73958 11.3497 6.89257 10.5812 7.20138C9.81275 7.51018 9.11331 7.96864 8.52356 8.55011C7.93381 9.13158 7.4655 9.82447 7.14586 10.5885C6.82622 11.3525 6.66162 12.1725 6.66162 13.0007C6.66162 13.8289 6.82622 14.6488 7.14586 15.4128C7.4655 16.1769 7.93381 16.8698 8.52356 17.4512C9.11331 18.0327 9.81275 18.4912 10.5812 18.8C11.3497 19.1088 12.1719 19.2618 13 19.25C14.6576 19.25 16.2473 18.5916 17.4194 17.4195C18.5915 16.2474 19.25 14.6576 19.25 13C19.25 11.3424 18.5915 9.75273 17.4194 8.58063C16.2473 7.40852 14.6576 6.75129 13 6.75129ZM13 9.25129C13.4981 9.24212 13.9931 9.33229 14.456 9.51655C14.9189 9.70082 15.3404 9.97547 15.696 10.3245C16.0515 10.6735 16.334 11.0898 16.5268 11.5492C16.7196 12.0086 16.819 12.5018 16.8191 13C16.8192 13.4983 16.72 13.9915 16.5273 14.4509C16.3346 14.9104 16.0523 15.3268 15.6969 15.676C15.3414 16.0251 14.92 16.2999 14.4572 16.4843C13.9943 16.6687 13.4994 16.7591 13.0013 16.75C12.0067 16.75 11.0529 16.355 10.3496 15.6517C9.64634 14.9484 9.25126 13.9946 9.25126 13C9.25126 12.0055 9.64634 11.0517 10.3496 10.3484C11.0529 9.64513 12.0067 9.25004 13.0013 9.25004L13 9.25129ZM19.5625 4.87629C19.1592 4.89243 18.7779 5.06398 18.4983 5.35501C18.2186 5.64603 18.0625 6.03396 18.0625 6.43754C18.0625 6.84113 18.2186 7.22905 18.4983 7.52008C18.7779 7.81111 19.1592 7.98265 19.5625 7.99879C19.9769 7.99879 20.3743 7.83417 20.6674 7.54115C20.9604 7.24812 21.125 6.85069 21.125 6.43629C21.125 6.02189 20.9604 5.62447 20.6674 5.33144C20.3743 5.03841 19.9769 4.87379 19.5625 4.87379V4.87629Z"
+                          fill="url(#paint0_linear_0_200)"
+                        />
+                        <defs>
+                          <linearGradient
+                            id="paint0_linear_0_200"
+                            x1="0.499283"
+                            y1="0.499756"
+                            x2="26.9291"
+                            y2="2.11418"
+                            gradientUnits="userSpaceOnUse"
+                          >
+                            <stop stop-color="#07C800" />
+                            <stop offset="0.612619" stop-color="#57FF51" />
+                            <stop offset="1" stop-color="#07C800" />
+                          </linearGradient>
+                        </defs>
+                      </svg>
+                    </a>
+                    <a href="https://t.me" target="_blank"
+                      ><svg
+                        width="26"
+                        height="26"
+                        viewBox="0 0 26 26"
+                        fill="none"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M13 0.5C6.1 0.5 0.5 6.1 0.5 13C0.5 19.9 6.1 25.5 13 25.5C19.9 25.5 25.5 19.9 25.5 13C25.5 6.1 19.9 0.5 13 0.5ZM18.8 9C18.6125 10.975 17.8 15.775 17.3875 17.9875C17.2125 18.925 16.8625 19.2375 16.5375 19.275C15.8125 19.3375 15.2625 18.8 14.5625 18.3375C13.4625 17.6125 12.8375 17.1625 11.775 16.4625C10.5375 15.65 11.3375 15.2 12.05 14.475C12.2375 14.2875 15.4375 11.375 15.5 11.1125C15.5087 11.0727 15.5075 11.0315 15.4966 10.9923C15.4857 10.953 15.4654 10.9171 15.4375 10.8875C15.3625 10.825 15.2625 10.85 15.175 10.8625C15.0625 10.8875 13.3125 12.05 9.9 14.35C9.4 14.6875 8.95 14.8625 8.55 14.85C8.1 14.8375 7.25 14.6 6.6125 14.3875C5.825 14.1375 5.2125 14 5.2625 13.5625C5.2875 13.3375 5.6 13.1125 6.1875 12.875C9.8375 11.2875 12.2625 10.2375 13.475 9.7375C16.95 8.2875 17.6625 8.0375 18.1375 8.0375C18.2375 8.0375 18.475 8.0625 18.625 8.1875C18.75 8.2875 18.7875 8.425 18.8 8.525C18.7875 8.6 18.8125 8.825 18.8 9Z"
+                          fill="url(#paint0_linear_0_202)"
+                        />
+                        <defs>
+                          <linearGradient
+                            id="paint0_linear_0_202"
+                            x1="0.5"
+                            y1="0.5"
+                            x2="26.9285"
+                            y2="2.11431"
+                            gradientUnits="userSpaceOnUse"
+                          >
+                            <stop stop-color="#07C800" />
+                            <stop offset="0.612619" stop-color="#57FF51" />
+                            <stop offset="1" stop-color="#07C800" />
+                          </linearGradient>
+                        </defs>
+                      </svg>
+                    </a>
+                  </div>
+                  <button class="menu-btn-login">Login</button>
+                </div>
+              </div>
+            </div>
           </nav>
         </div>
       </section>
