Исправил ссылки в футер

--- a/index.html
+++ b/index.html
@@ -1152,14 +1152,36 @@
           <li><a class="page-footer__link" href="#">Pages</a></li>
         </ul>
         <ul class="page-footer__social-link-wrp">
-          <li><a class="page-footer__link" href="#">Telegram</a></li>
-          <li><a class="page-footer__link" href="#">Instagram</a></li>
-          <li><a class="page-footer__link" href="#">Twitter</a></li>
+          <li>
+            <a class="page-footer__link" href="https://t.me" target="_blank"
+              >Telegram</a
+            >
+          </li>
+          <li>
+            <a
+              class="page-footer__link"
+              href="https://instagram.com"
+              target="_blank"
+              >Instagram</a
+            >
+          </li>
+          <li>
+            <a
+              class="page-footer__link"
+              href="https://twitter.com"
+              target="_blank"
+              >Twitter</a
+            >
+          </li>
         </ul>
         <ul class="page-footer__telephone-link-wrp">
-          <li><a class="page-footer__link" href="#">70-50-40-80</a></li>
           <li>
-            <a class="page-footer__link" href="#">nft-gostricke@mail.ru</a>
+            <a class="page-footer__link" href="tel: +70504080">70-50-40-80</a>
+          </li>
+          <li>
+            <a class="page-footer__link" href="mailto: nft-gostricke@mail.ru"
+              >nft-gostricke@mail.ru</a
+            >
           </li>
         </ul>
       </div>
